download section finised

--- a/index.html
+++ b/index.html
@@ -65,6 +65,17 @@
         </div>
         
     </div>
+    <section class="download-section">
+        <div>
+            <h3 class="header-decorate"><span>Play Instantly,</span> No downloads No Installs.</h3>
+            <p class="p-decorate">Play games online for free without downloading.just click the play button and play Instantly in your browser.</p>
+        </div>
+        <div class="image-size">
+            <img src="images/Rectangle 55.png" alt="">
+            <div class="rectangle-img" ><img src="images/Rectangle 66.png" alt=""></div>
+        </div>
+       
+    </section>
 
   </main> 
   <footer>
