added resposive part

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     
-  <header>
+  <header class="header-part">
        <nav>
         <nav>
           <img class="img-part"  src="images/Frame.png" alt="">
